e-commerce/mobile-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mobile-app-service
  labels:
    app: mobile-app
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: mobile-app
  type: ClusterIP
