e-commerce/mobile-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobile-app-ingress
  labels:
    app: mobile-app
spec:
  ingressClassName: nginx
  rules:
    - host: mobile.cbz.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mobile-app-service
              port:
                number: 80
